# font-resizer

./: Dockerfile  README.md  font_resizer.py  pyproject.toml  resize.py  shell.nix
.github/workflows/: build.yaml
