[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "font-resizer"
authors = [
  {name = "Philipp Schmitt", email = "philipp@schmitt.co"},
]
description = "Fontforge powered font resizer"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fontforge", "fonts", "font-resizer"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = []
version = "0.1.0"

[tool.black]
line-length = 79

[project.scripts]
font-resizer = "font_resizer:main"
